--- a/USNationalsApp/app/src/main/res/layout/content_competitor_list.xml
+++ b/USNationalsApp/app/src/main/res/layout/content_competitor_list.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="org.cubingusa.usnationals.CompetitorListActivity"
     tools:showIn="@layout/activity_competitor_list">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/competitor_input_height"
+        android:layout_margin="@dimen/competitor_input_margin">
+        <android.support.v7.widget.AppCompatImageView
+            android:src="@android:drawable/ic_menu_search"
+            android:layout_height="match_parent"
+            android:layout_width="@dimen/competitor_input_height"/>
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/competitor_input"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Hello World" />
+    </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+    <include layout="@layout/content_competitor_search_result" />
+
+</LinearLayout>
