--- a/USNationalsApp/app/src/main/res/values/dimens.xml
+++ b/USNationalsApp/app/src/main/res/values/dimens.xml
@@ -2,7 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="app_bar_height">160dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="competitor_input_height">50dp</dimen>
+    <dimen name="competitor_input_margin">10dp</dimen>
+    <dimen name="competitor_search_result_height">60dp</dimen>
+    <dimen name="competitor_search_result_margin">10dp</dimen>
+    <dimen name="competitor_search_result_text_size">20dp</dimen>
+    <dimen name="competitor_name_margin">5dp</dimen>
 </resources>
