--- a/USNationalsApp/app/src/main/res/layout/content_competitor_list.xml
+++ b/USNationalsApp/app/src/main/res/layout/content_competitor_list.xml
@@ -20,8 +20,7 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/competitor_input"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello World" />
+            android:layout_height="match_parent" />
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
