--- a/USNationalsApp/app/src/main/res/layout/activity_schedule.xml
+++ b/USNationalsApp/app/src/main/res/layout/activity_schedule.xml
@@ -17,7 +17,15 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/notification_button"
+                android:layout_width="@dimen/toolbar_icon_size"
+                android:layout_height="@dimen/toolbar_icon_size"
+                android:src="@drawable/bell"
+                android:layout_gravity="right"
+                android:layout_margin="@dimen/toolbar_icon_margin"/>
+            </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
