--- a/USNationalsApp/app/src/main/res/values/dimens.xml
+++ b/USNationalsApp/app/src/main/res/values/dimens.xml
@@ -15,4 +15,6 @@
     <dimen name="schedule_item_text_size">16dp</dimen>
     <dimen name="schedule_item_time_width">50dp</dimen>
     <dimen name="schedule_item_name_width">200dp</dimen>
+    <dimen name="toolbar_icon_size">40dp</dimen>
+    <dimen name="toolbar_icon_margin">10dp</dimen>
 </resources>
