--- a/USNationalsApp/app/src/main/res/layout/activity_schedule.xml
+++ b/USNationalsApp/app/src/main/res/layout/activity_schedule.xml
@@ -25,6 +25,13 @@
                 android:src="@drawable/bell"
                 android:layout_gravity="right"
                 android:layout_margin="@dimen/toolbar_icon_margin"/>
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/save_button"
+                android:layout_width="@dimen/toolbar_icon_size"
+                android:layout_height="@dimen/toolbar_icon_size"
+                android:src="@drawable/star"
+                android:layout_gravity="right"
+                android:layout_margin="@dimen/toolbar_icon_margin"/>
             </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
