--- a/USNationalsApp/app/src/main/res/values/dimens.xml
+++ b/USNationalsApp/app/src/main/res/values/dimens.xml
@@ -7,12 +7,15 @@
     <dimen name="competitor_input_height">50dp</dimen>
     <dimen name="competitor_input_margin">10dp</dimen>
     <dimen name="competitor_search_result_height">60dp</dimen>
+    <dimen name="competitor_search_result_width">300dp</dimen>
     <dimen name="competitor_search_result_margin">10dp</dimen>
     <dimen name="competitor_search_result_text_size">20dp</dimen>
+    <dimen name="competitor_search_result_icon_size">40dp</dimen>
+    <dimen name="competitor_search_result_icon_margin">10dp</dimen>
     <dimen name="competitor_name_margin">5dp</dimen>
     <dimen name="schedule_item_height">60dp</dimen>
     <dimen name="schedule_item_margin">5dp</dimen>
-    <dimen name="schedule_item_text_size">16dp</dimen>
+    <dimen name="schedule_item_text_size">16sp</dimen>
     <dimen name="schedule_item_time_width">50dp</dimen>
     <dimen name="schedule_item_name_width">200dp</dimen>
     <dimen name="toolbar_icon_size">40dp</dimen>
