--- a/USNationalsApp/app/src/main/res/layout/content_schedule.xml
+++ b/USNationalsApp/app/src/main/res/layout/content_schedule.xml
@@ -14,5 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <ProgressBar
+            android:id="@+id/schedule_spinner"
+            android:layout_width="@dimen/spinner_size"
+            android:layout_height="@dimen/spinner_size"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 </ScrollView>
