--- a/USNationalsApp/app/src/main/res/values/dimens.xml
+++ b/USNationalsApp/app/src/main/res/values/dimens.xml
@@ -21,4 +21,9 @@
     <dimen name="toolbar_icon_size">40dp</dimen>
     <dimen name="toolbar_icon_margin">10dp</dimen>
     <dimen name="spinner_size">100dp</dimen>
+    <dimen name="request_access_height">60dp</dimen>
+    <dimen name="request_access_padding">10dp</dimen>
+    <dimen name="request_access_text_size">20sp</dimen>
+    <dimen name="android_password_text_size">30sp</dimen>
+    <dimen name="admin_info_text_size">20dp</dimen>
 </resources>
