--- a/USNationalsApp/app/src/main/res/layout/content_schedule.xml
+++ b/USNationalsApp/app/src/main/res/layout/content_schedule.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.cubingusa.usnationals.ScheduleActivity"
+    tools:context=".CompetitorScheduleActivity"
     tools:showIn="@layout/activity_schedule">
     <LinearLayout
         android:id="@+id/schedule_container"
