First pass at stage schedule.

--- a/USNationalsApp/app/src/main/res/menu/menu.xml
+++ b/USNationalsApp/app/src/main/res/menu/menu.xml
@@ -8,6 +8,11 @@
         android:title="@string/action_competitor_list"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_stage_schedule"
+        android:orderInCategory="150"
+        android:title="@string/action_stage_schedule"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_admin"
         android:orderInCategory="999"
         android:title="@string/action_admin"
