--- a/USNationalsApp/app/src/main/res/values/dimens.xml
+++ b/USNationalsApp/app/src/main/res/values/dimens.xml
@@ -9,7 +9,7 @@
     <dimen name="competitor_search_result_height">60dp</dimen>
     <dimen name="competitor_search_result_width">300dp</dimen>
     <dimen name="competitor_search_result_margin">10dp</dimen>
-    <dimen name="competitor_search_result_text_size">20dp</dimen>
+    <dimen name="competitor_search_result_text_size">20sp</dimen>
     <dimen name="competitor_search_result_icon_size">40dp</dimen>
     <dimen name="competitor_search_result_icon_margin">10dp</dimen>
     <dimen name="competitor_name_margin">5dp</dimen>
@@ -29,4 +29,5 @@
     <dimen name="stage_chip_padding">5dp</dimen>
     <dimen name="divider_height">50dp</dimen>
     <dimen name="divider_text_size">20sp</dimen>
+    <dimen name="competitor_search_result_number_width">20dp</dimen>
 </resources>
