--- a/USNationalsApp/app/src/main/res/values/dimens.xml
+++ b/USNationalsApp/app/src/main/res/values/dimens.xml
@@ -30,4 +30,7 @@
     <dimen name="divider_height">50dp</dimen>
     <dimen name="divider_text_size">20sp</dimen>
     <dimen name="competitor_search_result_number_width">20dp</dimen>
+    <dimen name="competitor_search_result_number_margin">5dp</dimen>
+    <dimen name="heat_info_header_margin">5dp</dimen>
+    <dimen name="heat_info_header_text_size">20sp</dimen>
 </resources>
