--- a/USNationalsApp/app/src/main/res/layout/content_schedule_item.xml
+++ b/USNationalsApp/app/src/main/res/layout/content_schedule_item.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/schedule_item_margin"
         android:textSize="@dimen/schedule_item_text_size"
+        android:textStyle="bold"
         android:gravity="left|center_vertical"/>
     <ImageView
         android:id="@+id/schedule_item_icon"
@@ -25,5 +26,6 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/schedule_item_margin"
         android:textSize="@dimen/schedule_item_text_size"
+        android:textStyle="bold"
         android:gravity="left|center_vertical"/>
 </LinearLayout>
