--- a/USNationalsApp/app/src/main/res/values/dimens.xml
+++ b/USNationalsApp/app/src/main/res/values/dimens.xml
@@ -34,4 +34,7 @@
     <dimen name="heat_info_header_margin">5dp</dimen>
     <dimen name="heat_info_header_text_size">20sp</dimen>
     <dimen name="schedule_bottom_margin">16dp</dimen>
+    <dimen name="stage_chip_margin">5dp</dimen>
+    <dimen name="schedule_top_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
