--- a/src/templates/assign_heats_2.html
+++ b/src/templates/assign_heats_2.html
@@ -36,11 +36,6 @@
               {% endfor %}
             </select>
           </td>
-          {% if c.key.id() in assignments %}
-            <td>{{ assignments[c.key.id()].key.id() }}</td>
-          {% else %}
-            <td>N/A</td>
-          {% endif %}
           {% for h, text in competitor_to_conflicting_heats[c.key.id()] %}
             <td>{{ h.start_time.strftime(format) }}: <b>{{ text }}</b> ({{ h.key.id() }})</td>
           {% endfor %}
@@ -48,7 +43,7 @@
       {% endfor %}
     </table>
     <p>
-      <button type="submit" name="submit_heats">Submit</button>
+      <button type="submit" name="submit_heats" value="submit">Submit</button>
     </p>
   </form>
   <script src="/static/assign_heats.js" type="text/javascript"></script>
