--- a/src/templates/assign_heats_debug.html
+++ b/src/templates/assign_heats_debug.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>Heat Assignment Status</title>
+  <script src="/static/common.js"></script>
   <style type="text/css">
 div {
   font-family: sans-serif;
@@ -27,25 +28,32 @@ div.roundinfo img.eventicon {
 div.eventname {
   padding: 5px;
   float: left;
-  clear: right;
 }
 div.heatinfo {
-  float: left;
-  clear: both;
   width: 100%;
   overflow: auto;
   padding-top: 5px;
   padding-bottom: 5px;
 }
 div.heattime {
-  padding-right: 5px;
+  padding-right: 15px;
   padding-left: 5px;
   float: left;
-  width: 100px;
 }
 div.heatname {
-  float: left;
+  float: right;
   padding-right: 5px;
+}
+div.comp_in_heat {
+  clear: right;
+  padding: 5px;
+}
+div.comp_in_heat div.name {
+  float: left;
+  padding-right: 10px;
+}
+div.comp_in_heat div.birthday {
+  float: right;
 }
 div.eventinfo {
   clear: right;
@@ -83,13 +91,25 @@ div.stage_y {
           </div>
         </div>
         {% for h in heats_by_round[r.key.id()] %}
-          <div class="heatinfo stage_{{ h.stage.id() }}">
+          <div class="heatinfo stage_{{ h.stage.id() }}" onclick="toggle('complist_{{ h.key.id() }}');">
             <div class="heattime">
               {{ formats.FormatHeatStartTime(h.start_time) }}
             </div>
             <div class="heatname">
               {{ h.stage.get().name }} {{ h.number }}: {{ len(competitors_by_heat[h.key.id()]) }}
             </div>
+          </div>
+          <div class="heat_complist" id="complist_{{ h.key.id() }}" style="display: none;">
+            {% for c in competitors_by_heat[h.key.id()] %}
+              <div class="comp_in_heat">
+                <div class="name">
+                  {{ c.name }}
+                </div>
+                <div class="birthday">
+                  {{ formats.FormatCompetitorBirthday(c.date_of_birth) }}
+                </div>
+              </div>
+            {% endfor %}
           </div>
         {% endfor %}
       </div>
