More s/heat/group/g-ing

--- a/src/templates/assign_groups.html
+++ b/src/templates/assign_groups.html
@@ -2,10 +2,10 @@
 {% autoescape true %}
 <html>
 <head>
-  <title>Assign Heats</title>
+  <title>Assign Groups</title>
 </head>
 <body>
-  <h3>Assign Heats</h3>
+  <h3>Assign Groups</h3>
   <form action="{{ path }}" method="POST">
     <p>
       <select name="r">
