--- a/src/templates/assign_groups_2.html
+++ b/src/templates/assign_groups_2.html
@@ -2,9 +2,9 @@
 {% autoescape true %}
 <html>
 <head>
-  <title>Assign Heats</title>
+  <title>Assign Groups</title>
   <style type="text/css">
-    span.heatContainer {
+    span.groupContainer {
       padding: 5px;
     }
   </style>
@@ -16,8 +16,8 @@
     <h3>This round already has {{ num_current_competitors }} competitors.  Add data at your own risk!</h3>
   {% endif %}
   <p>
-    {% for h in round_heats %}
-      <span class="heatContainer">{{ h.stage.id().capitalize() }}{{ h.number }}: <span class="heatCount" id="{{ h.key.id() }}">0</span></span>
+    {% for h in round_groups %}
+      <span class="groupContainer">{{ h.stage.id().capitalize() }}{{ h.number }}: <span class="groupCount" id="{{ h.key.id() }}">0</span></span>
     {% endfor %}
   </p>
   <form action="{{ path }}" method="POST">
@@ -27,26 +27,26 @@
         <tr>
           <td>{{ c.name }}{% if c.is_staff %} (staff) {% endif %}</td>
           <td>
-            <select name="c_{{ c.key.id() }}" class="heatSelector">
+            <select name="c_{{ c.key.id() }}" class="groupSelector">
               <option value="null"></option>
-              {% for h in round_heats %}
+              {% for h in round_groups %}
                 <option value="{{ h.key.id() }}" {% if h == assignments[c.key.id()] %}selected{% endif %}>
                   {{ h.stage.id().capitalize() }}{{ h.number }} ({{ h.start_time.strftime(format) }})
                 </option>
               {% endfor %}
             </select>
           </td>
-          {% for h, text in competitor_to_conflicting_heats[c.key.id()] %}
+          {% for h, text in competitor_to_conflicting_groups[c.key.id()] %}
             <td>{{ h.start_time.strftime(format) }}: <b>{{ text }}</b> ({{ h.key.id() }})</td>
           {% endfor %}
         </tr>
       {% endfor %}
     </table>
     <p>
-      <button type="submit" name="submit_heats" value="submit">Submit</button>
+      <button type="submit" name="submit_groups" value="submit">Submit</button>
     </p>
   </form>
-  <script src="/static/assign_heats.js" type="text/javascript"></script>
+  <script src="/static/assign_groups.js" type="text/javascript"></script>
 </body>
 </html>
 {% endautoescape %}
