--- a/USNationalsApp/app/src/main/res/layout/content_group_info.xml
+++ b/USNationalsApp/app/src/main/res/layout/content_group_info.xml
@@ -10,24 +10,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="org.cubingusa.usnationals.HeatInfoActivity"
-    tools:showIn="@layout/activity_heat_info">
+    tools:context="org.cubingusa.usnationals.GroupInfoActivity"
+    tools:showIn="@layout/activity_group_info">
 
     <ProgressBar
-        android:id="@+id/heat_info_spinner"
+        android:id="@+id/group_info_spinner"
         android:layout_width="@dimen/spinner_size"
         android:layout_height="@dimen/spinner_size"
         style="?android:attr/progressBarStyleLarge"
         android:layout_gravity="center_horizontal" />
 
     <TextView
-        android:id="@+id/heat_info_start_time"
+        android:id="@+id/group_info_start_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/heat_info_header_margin"
-        android:textSize="@dimen/heat_info_header_text_size"/>
+        android:layout_margin="@dimen/group_info_header_margin"
+        android:textSize="@dimen/group_info_header_text_size"/>
     <LinearLayout
-        android:id="@+id/heat_info_content"
+        android:id="@+id/group_info_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"/>
