--- a/src/templates/printable_schedules.html
+++ b/src/templates/printable_schedules.html
@@ -67,7 +67,7 @@
                   {{ group.round.get().event.get().name }}
                 </td>
                 <td class="group-name">
-                  {{ group.stage.get().name }} {{ group.number }}
+                  {{ group.stage.get().name }} {{ group.Num() }}
                 </td>
               </tr>
             {% endfor %}
