--- a/src/templates/status_tracker.html
+++ b/src/templates/status_tracker.html
@@ -52,7 +52,7 @@
                     {{ Formatters.FormatDelta(group) }}
                   </td>
                   {% if is_admin and group.number >= 0 %}
-                    <td><a href="{{ uri_for('admin_notification', event_id=group.round.get().event.id(), round_id=group.round.get().number, stage_id=group.stage.id(), group_number=group.number) }}">[call]</a></td>
+                    <td><a href="{{ uri_for('admin_notification', event_id=group.round.get().event.id(), round_id=group.round.get().number, stage_id=group.stage.id(), group_number=group.Num()) }}">[call]</a></td>
                   {% endif %}
                 </tr>
               {% endfor %}
